--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -21,3 +21,8 @@ jobs:
         cache: maven
     - name: Build with Maven
       run: mvn clean test -Dsuite=suite
+    - name: Upload a Build Artifact
+      uses: actions/upload-artifact@v4.6.0
+      with:
+        name: Test Artifacts
+        path: logs/
