--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -20,7 +20,7 @@ jobs:
         distribution: 'temurin'
         cache: maven
     - name: Build with Maven
-      run: mvn clean test -Dsuite=suite
+      run: mvn test -DsuiteXmlFile=suite
     - name: Upload a Build Artifact
       uses: actions/upload-artifact@v4.6.0
       with:
