--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -10,6 +10,10 @@ jobs:
   build:
 
     runs-on: ubuntu-latest
+    permissions:
+      contents: read
+      checks: write
+      issues: write
 
     steps:
     - uses: actions/checkout@v4
@@ -19,10 +23,17 @@ jobs:
         java-version: '11'
         distribution: 'temurin'
         cache: maven
-    - name: Build with Maven
-      run: mvn test -DsuiteXmlFile=suite
     - name: Upload a Build Artifact
-      uses: actions/upload-artifact@v4.6.0
+      if: always()
+      uses: actions/upload-artifact@v4.4.3
       with:
-        name: Test Artifacts
-        path: logs/
+       name: Logs
+       path: logs/
+       
+    - name: Publish Test Report
+      if: always()
+      uses: dorny/test-reporter@v1
+      with:
+        name: TestNG Results
+        path: target/surefire-reports/junitreports/TEST-*.xml
+        reporter: java-junit
