--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -8,7 +8,6 @@ on:
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
     permissions:
       contents: read
@@ -17,12 +16,16 @@ jobs:
 
     steps:
     - uses: actions/checkout@v4
+    
     - name: Set up JDK 11
       uses: actions/setup-java@v4
       with:
         java-version: '11'
         distribution: 'temurin'
         cache: maven
+    - name: Execute Tests
+      run: mvn clean test -DsuiteXmlFile=suite
+        
     - name: Upload a Build Artifact
       if: always()
       uses: actions/upload-artifact@v4.4.3
